%% DAK LOUK DOMAIN – RAW MODELS
classDiagram
class UserModel
UserModel : +id int
UserModel : +username String
UserModel : +passwordHash String
UserModel : +profileImageUrl String?
UserModel : +phone String?
UserModel : +address String?
UserModel : +bio String?
UserModel : +createdAt DateTime
UserModel : +updatedAt DateTime
Cacheable <|-- UserModel

class FollowerModel
FollowerModel : +id int
FollowerModel : +followerId int
FollowerModel : +followedId int
FollowerModel : +createdAt DateTime
FollowerModel : +updatedAt DateTime
Cacheable <|-- FollowerModel

class MerchantModel
MerchantModel : +id int
MerchantModel : +userId int
MerchantModel : +rating double
MerchantModel : +username String
MerchantModel : +email String
MerchantModel : +bio String
MerchantModel : +profileImage String
MerchantModel : +createdAt DateTime
MerchantModel : +updatedAt DateTime
Cacheable <|-- MerchantModel

class ProductModel
ProductModel : +id int
ProductModel : +merchantId int
ProductModel : +name String
ProductModel : +description String?
ProductModel : +price double
ProductModel : +quantity int
ProductModel : +createdAt DateTime
ProductModel : +updatedAt DateTime
Cacheable <|-- ProductModel

class ProductCategoryModel
ProductCategoryModel : +id int
ProductCategoryModel : +name String
Cacheable <|-- ProductCategoryModel

class ProductCategoryMapModel
ProductCategoryMapModel : +id int
ProductCategoryMapModel : +productId int
ProductCategoryMapModel : +categoryId int
Cacheable <|-- ProductCategoryMapModel

class ProductMediaModel
ProductMediaModel : +id int
ProductMediaModel : +productId int
ProductMediaModel : +url String
ProductMediaModel : +mediaType String?
ProductMediaModel : +createdAt DateTime
ProductMediaModel : +updatedAt DateTime
Cacheable <|-- ProductMediaModel

class ReviewModel
ReviewModel : +id int
ReviewModel : +userId int
ReviewModel : +merchantId int
ReviewModel : +text String?
ReviewModel : +rating double?
ReviewModel : +createdAt DateTime
ReviewModel : +updatedAt DateTime
Cacheable <|-- ReviewModel

class CartModel
CartModel : +id int
CartModel : +userId int
CartModel : +productId int
CartModel : +quantity int
CartModel : +createdAt String
CartModel : +updatedAt String
Cacheable <|-- CartModel

class OrderModel
OrderModel : +id int
OrderModel : +userId int
OrderModel : +merchantId int
OrderModel : +status String
OrderModel : +createdAt DateTime
OrderModel : +updatedAt DateTime
Cacheable <|-- OrderModel

class OrderProductModel
OrderProductModel : +id int
OrderProductModel : +orderId int
OrderProductModel : +productId int
OrderProductModel : +quantity int
Cacheable <|-- OrderProductModel

class PostModel
PostModel : +id int
PostModel : +merchantId int
PostModel : +caption String?
PostModel : +createdAt DateTime
PostModel : +updatedAt DateTime
Cacheable <|-- PostModel

class PostProductModel
PostProductModel : +id int
PostProductModel : +postId int
PostProductModel : +productId int
Cacheable <|-- PostProductModel

class PostLikeModel
PostLikeModel : +id int
PostLikeModel : +userId int
PostLikeModel : +postId int
PostLikeModel : +createdAt DateTime
PostLikeModel : +updatedAt DateTime
Cacheable <|-- PostLikeModel

class PostSaveModel
PostSaveModel : +id int
PostSaveModel : +userId int
PostSaveModel : +postId int
PostSaveModel : +createdAt DateTime
PostSaveModel : +updatedAt DateTime
Cacheable <|-- PostSaveModel

class ChatModel
ChatModel : +id int
ChatModel : +chatRoomId int
ChatModel : +senderId int
ChatModel : +text String
ChatModel : +createdAt String
ChatModel : +updatedAt String
Cacheable <|-- ChatModel

class ChatRoomModel
ChatRoomModel : +id int
ChatRoomModel : +userId int
ChatRoomModel : +merchantId int
ChatRoomModel : +createdAt String
ChatRoomModel : +updatedAt String
Cacheable <|-- ChatRoomModel

class LiveStreamModel
LiveStreamModel : +id int
LiveStreamModel : +merchantId int
LiveStreamModel : +title String
LiveStreamModel : +streamUrl String
LiveStreamModel : +thumbnailUrl String?
LiveStreamModel : +viewCount int
LiveStreamModel : +createdAt String
LiveStreamModel : +updatedAt String
Cacheable <|-- LiveStreamModel

class LiveStreamChatModel
LiveStreamChatModel : +id int
LiveStreamChatModel : +liveStreamId int
LiveStreamChatModel : +userId int
LiveStreamChatModel : +text String
LiveStreamChatModel : +createdAt String
LiveStreamChatModel : +updatedAt String
Cacheable <|-- LiveStreamChatModel

class LiveStreamProductModel
LiveStreamProductModel : +id int
LiveStreamProductModel : +liveStreamId int
LiveStreamProductModel : +productId int
Cacheable <|-- LiveStreamProductModel

class PromoMediaModel
PromoMediaModel : +id int
PromoMediaModel : +postId int
PromoMediaModel : +url String
PromoMediaModel : +mediaType String
PromoMediaModel : +createdAt DateTime
PromoMediaModel : +updatedAt DateTime
Cacheable <|-- PromoMediaModel

